--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -36,6 +36,10 @@ h6 {
     font-weight: 700;
 }
 
+h2:hover {
+    color: #233140;
+}
+
 hr.star-light,
 hr.star-primary {
     margin: 25px auto 30px;
